force-app/main/default/objects/NTB_Employee__c/NTB_Employee__c.object-meta.xml
<CustomObject>
    <label>日東紡マテ_社員</label>
    <nameField>
        <label>社員番号文字列</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>