force-app/main/default/objects/NTB_Employee__c/fields/Field346__c.field-meta.xml
<CustomField>
    <fullName>Field346__c</fullName>
    <label>言語</label>
    <length>255</length>
    <type>Text</type>
</CustomField>