force-app/main/default/objects/NTB_Employee__c/fields/Field362__c.field-meta.xml
<CustomField>
    <fullName>Field362__c</fullName>
    <label>他の担当業務</label>
    <length>255</length>
    <type>Text</type>
</CustomField>