force-app/main/default/objects/NTB_Employee__c/fields/Field396__c.field-meta.xml
<CustomField>
    <fullName>Field396__c</fullName>
    <label>ライセンスする製品</label>
    <length>255</length>
    <type>Text</type>
</CustomField>