force-app/main/default/objects/NTB_Employee__c/fields/X2__c.field-meta.xml
<CustomField>
    <fullName>X2__c</fullName>
    <label>電話番号2</label>
    <type>Phone</type>
</CustomField>